= Counterclockwise ChangeLog 
Laurent Petit <laurent dot petit at gmail dot com>
:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: 
:toc-title!:
:toclevels: 0

== Changes between Counterclockwise 0.25.0 and 0.25.1

`0.25.1` released on May xx, 2014

=== Bug fixes

- Error on load file in REPL, due to spaces in path introduced in 0.25.0. Thank you alzadude for the Pull Request!
- Project wizard issue if you (only) unselect the default location checkbox. Fix Issue #637

== Changes between Counterclockwise 0.24.2 and 0.25.0

`0.25.0` released on April 25, 2014

Counterclockwise now uses Clojure 1.6.0 internally instead of 1.6.0-alpha3 before.

=== Launch startup time

The launch startup time of leiningen projects has been slightly improved by using more appropriate JVM flags (inspired by the ones used by the leiningen shell script).

=== Bug fixes

==== AOT Compilation very slow, and / or freezing the UI

There was kind of an incompatibility between CCW and Leiningen. In short, CCW uses the `:injections` project key to inject nrepl server code, and this code is also injected by leiningen when AOT compiling in subprocesses. The server code was creating futures, thus preventing the AOT compilation process to shutdown in due time.

The problem of UI freeze has also been globally addressed by improving the launcher code.

==== Console View stealing focus from REPL View

With the new Leiningen Launcher, the Console View was systematically stealing focus from the REPL View, because it was (deterministically) outputting the REPL server port after the REPL View was started and focused on.

This improper behavior was a consequence of the use of an acknowledgement socket between the nrepl server and the nrepl client. Leiningen gets the nrepl port after the acknowledgement has been done by the nrepl server library. So it cannot be changed to output the nrepl port before nrepl sends it back via the acknowledgement socket.
