@@ -12,6 +12,12 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 `0.25.1` released on May xx, 2014
 
+=== Explicitly running leiningen headless
+When Preference `Clojure` > `General` > `Launch Leiningen projects with Leiningen` is unchecked, then `Run as` for the project will use the Eclipse Project Settings, not the Leiningen project settings. And Leiningen will not be used to launch the project. +
+But still, users have reported that there is a need for a command for explicitly launching the project via Leiningen.
+
+Thus the "Headless Leiningen REPL" command has been ressuscited. You can find it in the Leiningen contextual menu, or invoke it via the kbd:[Alt+L H] Keyboard Shortcut.
+
 === Bug fixes
 
 - Error on load file in REPL, due to spaces in path introduced in 0.25.0. Thank you alzadude for the Pull Request!
